--- a/src/components/CityCard.css
+++ b/src/components/CityCard.css
@@ -1,4 +1,4 @@
-/* .city-card {
+.city-card {
   position: relative;
   border-radius: 10px;
   overflow: hidden;
@@ -54,4 +54,4 @@ p {
   .city-card {
     width: 30%;
   }
-} */
+}
