--- a/src/components/ScrollToTop.css
+++ b/src/components/ScrollToTop.css
@@ -7,9 +7,9 @@
 }
 
 .scroll-icon {
-  font-size: 2rem;
-  color: #ea3e3b;
-  background-color: #fff;
+  font-size: 3rem;
+  color: #fff;
+  background-color: #ea3e3b;
   padding: 10px;
   border-radius: 50%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -17,5 +17,5 @@
 }
 
 .scroll-icon:hover {
-  background-color: #f0f0f0;
+  background-color: blueviolet;
 }
