--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -12,6 +12,11 @@
   position: relative;
 }
 .overlayz {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   position: absolute;
   top: 0;
   left: 0;
